--- a/Final Deliverables/code/templates/page.html
+++ b/Final Deliverables/code/templates/page.html
@@ -1,113 +1,324 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+    <head>
+        <title> FASHIONS</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+        
+    </head>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            font-family:"Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+        
+        }
+        .main{
+            width: 100%;
+            background: linear-gradient(to top, rgba(0,0,0,0.5),rgba(0,0,0,0.5)50%);
+            background-position: center;
+            background-size: cover;
+            height: 100%;
+            font-family:"Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+        
+        }
+        
+        .navbar{
+            width: 100%;
+            height: 75px;
+            margin: auto;
+        }
+        
+        .icon{
+            width: 200px;
+            float: left;
+            height: 70px;
+        }
+        
+        .logo{
+            color:rgb(98, 246, 152);
+            font-size: 35px;
+            
+            padding-left: 20px;
+            float: left;
+            padding-top: 10px;
+        }
+        
+        .menu{
+            width: 400px;
+            float: left;
+            height: 70px;
+        }
+        
+        ul{
+           float: left;
+           display: flex;
+           justify-content: center;
+           align-items: center; 
+        }
+        
+        ul li{
+            list-style: none;
+            margin-left: 62px;
+            margin-top: 27px;
+            font-size: 14px;
+        }
+        
+        ul li a{
+            text-decoration: none;
+            color: #ffff;
+            
+            font-weight: bold;
+            transition: 0.4s ease-in-out;
+        }
+        
+        ul li a:hover{
+            color: rgb(98, 246, 152);
+        }
+        
+        .search{
+            width: 330px;
+            float: left;
+            margin-left: 270px;
+        }
+        
+        .srch{
+            
+            width: 200px;
+            height: 40px;
+            background: transparent;
+            border: 1px solid rgb(98, 246, 152);
+            margin-top: 13px;
+            color: #ffff;
+            border-right: none;
+            font-size: 16px;
+            float: left;
+            padding: 10px;
+            border-bottom-left-radius: 5px;
+            border-top-left-radius: 5px;
+        }
+        
+        .btn{
+            width: 100px;
+            height: 40px;
+            background:rgb(98, 246, 152) ;
+            border: 2px solid rgb(98, 246, 152);
+            margin-top: 13px;
+            color: #ffff;
+            font-size: 15px;
+            border-bottom-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+        }
+        
+        .btn:focus{
+            outline: none; 
+        }
+        
+        .srch:focus{
+            outline: none;
+        }
+        
+        .content{
+            width: 1200px;
+            height: auto;
+            margin: auto;
+            color: #ffff;
+            position: relative;
+        }
+        
+        .content.par{
+            padding-left: 20px;
+            padding-bottom: 25px;
+           
+            letter-spacing: 1.2px;
+            line-height: 30px;
+        }
+        
+        .content h1{
+            
+            font-size: 50px;
+            padding-left: 20px;
+            margin-top: 9%;
+            letter-spacing: 2px;
+        }
+        
+        .content .cn{
+            width: 160px;
+            height: 40px;
+            background: rgb(98, 246, 152);
+            border: none;
+            margin-bottom: 10px;
+            margin-left: 20px;
+            font-size: 18px;
+            border-radius: 10px;
+            cursor: pointer;
+            transition:  .4s ease;
+        }
+        
+        .content .cn a{
+            text-decoration: none;
+            color: #000;
+            transition:  .3s ease;
+        }
+        
+        .cn:hover{
+            background-color: #fff;
+        }
+        
+        .content span{
+            color:rgb(98, 246, 152);
+            font-size: 60px;
+        }
+        
+        .form{
+            width: 250px;
+            height: 380px;
+            background: linear-gradient(to top,rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
+            position: absolute;
+            top: -20px;
+            left: 870px;
+            border-radius: 10px;
+            padding: 25px;
+        }
+        
+        .form h2{
+            width: 220px;
+            
+            text-align: center;
+            color:rgb(98, 246, 152);
+            font-size: 22px;
+           
+            border-radius: 10px;
+            margin: 2px;
+            padding: 8px;
+        }
+        
+        .form input{
+            width: 240px;
+            height: 35px;
+            background: transparent;
+        }
+        
+        .form input{
+            width: 240px;
+            height: 35px;
+            background: transparent;
+            border-bottom: 1px solid rgb(98, 246, 152);
+            border-top: none;
+            border-right: none;
+            border-left: none;
+            color: #fff;
+            font-size: 15px;
+            letter-spacing: 1px;
+            margin-top: 30px;
+            
+        }
+        
+        .form input:focus{
+            outline: none;
+        }
+        
+        ::placeholder{
+            color: #fff;
+            
+        }
+        
+        .btnn{
+            width: 240px;
+            height: 40px;
+            background: rgb(98, 246, 152);
+            border: none;
+            margin-top: 30px;
+            font-size: 18px;
+            border-radius: 10px;
+            cursor: pointer;
+            color: #fff;
+            transition: 0.4s ease;
+        }
+        
+        .btnn:hover{
+            background: #fff;
+            color: rgb(98, 246, 152);
+        }
+        
+        .btnn a{
+            text-decoration: none;
+            color: #000;
+            font-weight: bold;
+        }
+        
+        .form .link{
+            
+            font-size: 17px;
+            padding-top: 20px;
+            text-align: center;
+        }
+        
+        .form .link a{
+            text-decoration: none;
+            color: rgb(98, 246, 152);
+        }
+        
+        .liw{
+            padding-top: 15px;
+            padding-bottom: 10px;
+            text-align: center;
+        }
+        body{
+            background-color:pink;
+            background-image: url("/static/image.jpeg");
+            height: 90vh;
+            width: 100%;
+            background-size: cover;
+            background-position: top 25% right 0;
+         }
+        
+            </style>
     
-    <!-- custom css file link  -->
-    <link rel="stylesheet" href="/static/pay.css">
-
-</head>
-<body>
-
-<div class="container">
-
-    <form action="">
-
-        <div class="row">
-
-            <div class="col">
-
-                <h3 class="title">billing address</h3>
-
-                <div class="inputBox">
-                    <span>full name :</span>
-                    <input type="text" placeholder="alex">
-                </div>
-                <div class="inputBox">
-                    <span>email :</span>
-                    <input type="email" placeholder="example@example.com">
-                </div>
-                <div class="inputBox">
-                    <span>address :</span>
-                    <input type="text" placeholder="room - street - locality">
-                </div>
-                <div class="inputBox">
-                    <span>city :</span>
-                    <input type="text" placeholder="chennai">
+    <body>
+    
+        <div class="main">
+            <div class="navbar">
+                <div class="icon">
+                    <h2 class="logo">SFR FASHIONS</h2>
                 </div>
 
-                <div class="flex">
-                    <div class="inputBox">
-                        <span>state :</span>
-                        <input type="text" placeholder="india">
-                    </div>
-                    <div class="inputBox">
-                        <span>zip code :</span>
-                        <input type="text" placeholder="123 456">
-                    </div>
+                <div class="menu">
+                    <ul>
+                        
+                        <li><a href="/admin">ADMIN</a></li>
+                    
+                      >
+                     
+                     
+                    </ul>
+                </div>
+
+                <div class="search">
+                    <input class="srch" type="search" name="" placeholder="Type to search">
+                    <a href="#"><button class="btn">Search</button></a>
                 </div>
 
             </div>
+            
+            <div class="content">
+                <h1>Smart Fashion <br><span>Application</span></h1>
+                
+                    <div class="form">
+                        <form action="{{ url_for('login') }}" method="post">
+                            <div class="msg">{{ msg }}</div>
+                        <h2>SMART LOGIN</h2>
+                        <form action="/Login" method="post">
+                        <input type="text"     name="username"     placeholder="Enter Username Here">
+                        <input type="password" name="password" placeholder="Enter Password here">
+                        <button  type="submit" class="btnn"><a href="home1.html">Login</a></button>
 
-            <div class="col">
-
-                <h3 class="title">payment</h3>
-
-                <div class="inputBox">
-                    <span>cards accepted :</span>
-                    <img src="images/card_img.png" alt="">
-                </div>
-                <div class="inputBox">
-                    <span>name on card :</span>
-                    <input type="text" placeholder="mr.alex">
-                </div>
-                <div class="inputBox">
-                    <span>credit card number :</span>
-                    <input type="number" placeholder="1111-2222-3333-4444">
-                </div>
-                <div class="inputBox">
-                    <span>exp month :</span>
-                    <input type="text" placeholder="january">
-                </div>
-
-                <div class="flex">
-                    <div class="inputBox">
-                        <span>exp year :</span>
-                        <input type="number" placeholder="2022">
+                        <p class="link">Don't have an account<br>
+                        <a href="/reg">Sign up </a> here</a></p>
+                        
+                        </form>
+                      
                     </div>
-                    <div class="inputBox">
-                        <span>CVV :</span>
-                        <input type="text" placeholder="1234">
-                    </div>
-                </div>
-
             </div>
-    
         </div>
         
-        
-    </form>
-    <div class="pop">
-    <button type="submit" class="btn" onclick="openPopup()">Proceed To Pay</button>
-         <div class="popup" id="popup">
-           <img src="ticker.png">
-           <h2>Thank You</h2>
-           <p>Payment Successful. Thanks</p>
-           <a href="/home1">
-           <button type="button" onclick="closePopup()">OK</button></a>
-         </div>
-       </div>
-    <script>
-      let popup= document.getElementById("popup");
-      function openPopup(){
-        popup.classList.add("open-popup");
-      }
-      function closePopup(){
-        popup.classList.remove("open-popup");
-      }
-    </script>
-    
-</body>
+    </body>
 </html>
