--- a/Final Deliverables/code/templates/single6.html
+++ b/Final Deliverables/code/templates/single6.html
@@ -102,7 +102,7 @@
        <img src="/static/img/products/n1.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -118,7 +118,7 @@
        <img src="/static/img/products/n2.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -134,7 +134,7 @@
        <img src="/static/img/products/n3.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -150,7 +150,7 @@
        <img src="/static/img/products/n4.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
