--- a/Final Deliverables/code/templates/single9.html
+++ b/Final Deliverables/code/templates/single9.html
@@ -103,7 +103,7 @@
        <img src="/static/img/products/n1.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -119,7 +119,7 @@
        <img src="/static/img/products/n2.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -135,7 +135,7 @@
        <img src="/static/img/products/n3.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -151,7 +151,7 @@
        <img src="/static/img/products/n4.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
