--- a/Final Deliverables/code/templates/single14.html
+++ b/Final Deliverables/code/templates/single14.html
@@ -101,7 +101,7 @@
        <img src="/static/img/products/n1.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -117,7 +117,7 @@
        <img src="/static/img/products/n2.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -133,7 +133,7 @@
        <img src="/static/img/products/n3.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
@@ -149,7 +149,7 @@
        <img src="/static/img/products/n4.jpg" alt="">
        <div class="des">
         <span>adidas</span>
-        <h5>Cartoon Astronaut T-shirts</h5>
+        <h5>T-shirts</h5>
         <div class="star">
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
